Reduce excessive whitespace and fix table rendering

--- a/src/app/typography.css
+++ b/src/app/typography.css
@@ -42,10 +42,10 @@
 
   color: var(--prose-color);
   font-size: var(--text-sm);
-  line-height: 2;
+  line-height: 1.75;
 
   *:where(:not(.not-prose, .not-prose *)) + *:where(:not(.not-prose, .not-prose *)) {
-    margin-top: calc(var(--spacing) * 6);
+    margin-top: calc(var(--spacing) * 4);
   }
 
   h2:where(:not(.not-prose, .not-prose *)) {
@@ -54,7 +54,7 @@
     letter-spacing: -0.025em;
     color: var(--prose-code-color);
     font-weight: var(--font-weight-semibold);
-    margin-top: calc(var(--spacing) * 20);
+    margin-top: calc(var(--spacing) * 12);
   }
 
   h2:has(+ h3):where(:not(.not-prose, .not-prose *)) {
@@ -73,11 +73,11 @@
     line-height: calc(28 / 18);
     color: var(--prose-heading-color);
     font-weight: var(--font-weight-semibold);
-    margin-top: calc(var(--spacing) * 16);
+    margin-top: calc(var(--spacing) * 10);
   }
 
   h2 + h3:where(:not(.not-prose, .not-prose *)) {
-    margin-top: calc(var(--spacing) * 6);
+    margin-top: calc(var(--spacing) * 4);
   }
 
   h4:where(:not(.not-prose, .not-prose *)) {
@@ -85,7 +85,7 @@
     line-height: calc(28 / 14);
     color: var(--prose-heading-color);
     font-weight: var(--font-weight-semibold);
-    margin-top: calc(var(--spacing) * 12);
+    margin-top: calc(var(--spacing) * 8);
   }
 
   :is(h2, h3, h4):where(:not(.not-prose, .not-prose *)) {
@@ -199,29 +199,35 @@
     margin-top: 2em;
     margin-bottom: 2em;
     font-size: var(--text-sm);
-    line-height: 1.4;
+    line-height: 1.6;
+    border-collapse: collapse;
+    display: table;
   }
 
   thead:where(:not(.not-prose, .not-prose *)) {
-    border-bottom-width: 1px;
+    border-bottom-width: 2px;
     border-bottom-color: var(--prose-th-borders);
+    background-color: color-mix(in oklab, var(--color-gray-50) 50%, transparent);
+  }
+
+  .dark thead:where(:not(.not-prose, .not-prose *)) {
+    background-color: color-mix(in oklab, var(--color-gray-800) 30%, transparent);
   }
 
   thead th:where(:not(.not-prose, .not-prose *)) {
     color: var(--prose-heading-color);
     font-weight: 600;
     vertical-align: bottom;
-    padding-inline-end: 0.6em;
-    padding-bottom: 0.8em;
-    padding-inline-start: 0.6em;
+    padding: 0.8em 0.8em;
+    text-align: left;
   }
 
   thead th:first-child:where(:not(.not-prose, .not-prose *)) {
-    padding-inline-start: 0;
+    padding-inline-start: 1em;
   }
 
   thead th:last-child:where(:not(.not-prose, .not-prose *)) {
-    padding-inline-end: 0;
+    padding-inline-end: 1em;
   }
 
   tbody tr:where(:not(.not-prose, .not-prose *)) {
@@ -229,12 +235,29 @@
     border-bottom-color: var(--prose-td-borders);
   }
 
+  tbody tr:hover:where(:not(.not-prose, .not-prose *)) {
+    background-color: color-mix(in oklab, var(--color-gray-50) 30%, transparent);
+  }
+
+  .dark tbody tr:hover:where(:not(.not-prose, .not-prose *)) {
+    background-color: color-mix(in oklab, var(--color-gray-800) 20%, transparent);
+  }
+
   tbody tr:last-child:where(:not(.not-prose, .not-prose *)) {
     border-bottom-width: 0;
   }
 
   tbody td:where(:not(.not-prose, .not-prose *)) {
-    vertical-align: baseline;
+    vertical-align: top;
+    padding: 0.8em 0.8em;
+  }
+
+  tbody td:first-child:where(:not(.not-prose, .not-prose *)) {
+    padding-inline-start: 1em;
+  }
+
+  tbody td:last-child:where(:not(.not-prose, .not-prose *)) {
+    padding-inline-end: 1em;
   }
 
   tfoot:where(:not(.not-prose, .not-prose *)) {
